--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <ul>
             <li><a href="/home.html">Home Page</a></li>
-            <li><a href="/category.html">Category Page</a></li>
+            <!-- <li><a href="/category.html">Category Page</a></li> -->
             <li><a href="/login.html">Login</a></li>
             <li><a href="/styles.css">Stylesheet</a></li>
         </ul>
